# CMakeList.txt : CMake project for WorkOnTheDifferentStuffOfCMake, include source and define
# project specific logic here.
#

#[[-------------------------------------------------------------------------
                    Configuration cmake project
]]#-------------------------------------------------------------------------
cmake_minimum_required (VERSION 3.8)

project ("WorkOnTheDifferentStuffOfCMake")

add_subdirectory ("GeneratorFromLayout")