# CMakeList.txt : CMake project for DifferentTasksByAlgorithms, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
# add_executable (DifferentTasksByAlgorithms "TheSkylineProblem.cpp")
# add_executable (DifferentTasksByAlgorithms "ReplaceWords.cpp")
# add_executable (DifferentTasksByAlgorithms "AddAndSearchWord.cpp")
# add_executable (DifferentTasksByAlgorithms "MaxXORofTwoNumbersInArray.cpp")
# add_executable (DifferentTasksByAlgorithms "WordSearch_v2.cpp" )
add_executable (DifferentTasksByAlgorithms "PalindromePairs.cpp" )
# TODO: Add tests and install targets if needed.
